some changes in projects screen

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             enhance user experiences.
           </p>
           <div class="btn-con">
-            <a href="./file/yash_rao_old.pdf" download class="main-btn">
+            <a
+              href="./file/yash_rao_4ye_java_developer.pdf"
+              download
+              class="main-btn"
+            >
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -78,7 +82,11 @@
               to mitigate Log4J vulnerability
             </p>
             <div class="btn-con">
-              <a href="#" class="main-btn">
+              <a
+                href="./file/yash_rao_4ye_java_developer.pdf"
+                download
+                class="main-btn"
+              >
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
@@ -152,7 +160,6 @@
                   <span class="liferay"></span>
                 </div>
               </div>
-              x `
             </div>
             <div class="progress-bar">
               <p class="prog-title">Angular</p>
@@ -206,9 +213,9 @@
             <p class="tl-duration">2019 - 2021</p>
             <h5>System Engineer<span> - Infosys</span></h5>
             <p>
-              Developed microservices those can process incoming cloud Events
-              and send important information and actions to an employee in terms
-              of a Nudge That can be sent via Web UI of Infosys website, Email
+              Developed microservices in order to process incoming cloud Events
+              and send important information and actions to employees in terms
+              of a Nudge that can be sent via Web UI of Infosys website, Email
               or Mobile UI of Infosys mobile application channels.
             </p>
           </div>
@@ -244,7 +251,11 @@
               <img src="img/reactive-mongo-webflux.jpg" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Spring Webflux - Reactive MongoDB - Streaming API</h3>
+              <h3>
+                Spring Webflux <br />
+                - Reactive MongoDB <br />
+                - Streaming API
+              </h3>
               <div class="icons">
                 <a
                   href="https://github.com/FluxRao/webflux_mongo_reactive_streaming"
@@ -292,7 +303,11 @@
               <img src="img/spring-annotations.jpg" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Spring Boot - Annotations Cheat sheet</h3>
+              <h3>
+                Spring Boot <br />
+                - Annotations <br />
+                - Cheat sheet
+              </h3>
               <div class="icons">
                 <a
                   href="https://github.com/FluxRao/springboot-annotation-cheatsheet"
