made changes in images

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
         <p class="port-text">
           Here is some of my work that I've done in various programming
-          languages.
+          languages and technologies.
         </p>
         <div class="portfolios">
           <div class="portfolio-item">
@@ -314,44 +314,6 @@
                   class="icon"
                 >
                   <i class="fab fa-github"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </div>
@@ -546,9 +508,6 @@
       </div>
       <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
-      </div>
-      <div class="control" data-id="blogs">
-        <i class="far fa-newspaper"></i>
       </div>
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
